# VisPrep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  image_utils.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
image_utils/: __init__.py  __main__.py  _utils.py  adapters.py  alpha.py  cli.py  collect.py  convert.py  create.py  metadata.py  optimize.py  save.py  transform.py
tests/: __init__.py  conftest.py  test_batch_operations.py  test_format_conversion.py  test_image_creation.py  test_integration.py  test_metadata.py  test_save_export.py  test_size_optimization.py  test_transformation.py  test_validation.py
visprep/: __init__.py  __main__.py  adapters.py  alpha.py  cli.py  collect.py  convert.py  create.py  metadata.py  optimize.py  save.py  transform.py
