[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "visprep"
version = "0.1.0"
description = "Image processing utilities for vision analysis pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
[project.optional-dependencies]
cv2 = ["opencv-python>=4.8.0"]

[project.urls]
Source = "https://github.com/csv610/VisPrep"

[project.scripts]
visprep = "visprep.cli:main"

[tool.setuptools.packages.find]
include = ["visprep*"]
